# mir

./: .clang-format  CMakeLists.txt  spread.yaml
.github/workflows/: spread.yml
cmake/: MirCommon.cmake
debian/: control
examples/example-server-lib/: tiling_window_manager.cpp
include/test/mir_test_framework/: headless_display_buffer_compositor_factory.h
src/miroil/: CMakeLists.txt
src/platform/: CMakeLists.txt
src/platform/graphics/: CMakeLists.txt  cpu_buffers.cpp  drm_formats.cpp  linux_dmabuf.cpp  shm_buffer.cpp
src/platform/udev/: CMakeLists.txt
src/renderers/gl/: renderer.cpp  renderer.h  renderer_factory.cpp  renderer_factory.h
src/server/: CMakeLists.txt
src/server/compositor/: default_configuration.cpp  default_display_buffer_compositor.cpp  default_display_buffer_compositor.h  default_display_buffer_compositor_factory.cpp  default_display_buffer_compositor_factory.h
src/server/frontend_wayland/: wayland_executor.cpp  wayland_executor.h
src/server/graphics/: software_cursor.cpp
src/server/input/: touchspot_controller.cpp
tests/integration-tests/: test_surface_first_frame_sync.cpp  test_surface_stack_with_compositor.cpp
tests/mir_test_doubles/: CMakeLists.txt
tests/mir_test_framework/: headless_display_buffer_compositor_factory.cpp  headless_test.cpp  platform_graphics_throw.cpp  stubbed_graphics_platform.cpp  stubbed_graphics_platform.h  stubbed_server_configuration.cpp  test_display_server.cpp
tests/platform_test_harness/: graphics_platform_test_harness.cpp
tests/unit-tests/wayland/: CMakeLists.txt  (+1 more)
tools/: ppa-upload.sh
(+18 files in other folders)
